fixed layout issues with <figure> tag

--- a/src/News.App/wwwroot/css/theme.scss
+++ b/src/News.App/wwwroot/css/theme.scss
@@ -24,7 +24,7 @@ $link-hover-decoration: underline;
 }
 
 // Fix for img tags in posts
-img {
+img, figure {
     @extend .img-fluid;
 }
 
